--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,35 @@
-<html>
-  <head>
-    <h1>Numerical website</h1>
-  </head>
-  <body>
-    <nav>
-      <li><a routerLink="/root">root of equation</a></li>
-      <li><a routerLink="/linear">linear algibra</a></li>
-      <li><a routerLink="/interpotation and extrapolation">interpotation and extrapolation</a></li>
-    </nav>
-      <router-outlet></router-outlet>
-  </body>
-</html>
+<div
+  class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top"
+>
+  <h5 class="my-0 mr-md-auto font-weight-normal">Angular Mean Auth</h5>
+  <nav class="my-2 my-md-0 mr-md-3">
+    <a *ngIf="this.authService.isLoggedIn" class="p-2 text-dark"
+      >User Profile</a
+    >
+    <a
+      *ngIf="!this.authService.isLoggedIn"
+      class="p-2 text-dark"
+      routerLinkActive="active"
+      routerLink="/log-in"
+      >Sign in</a
+    >
+  </nav>
+  <a
+    *ngIf="!this.authService.isLoggedIn"
+    class="btn btn-outline-primary"
+    routerLinkActive="active"
+    routerLinkActive="active"
+    routerLink="/sign-up"
+    >Sign up</a
+  >
+  <button
+    (click)="logout()"
+    *ngIf="this.authService.isLoggedIn"
+    type="button"
+    class="btn btn-danger"
+  >
+    Logout
+  </button>
+</div>
+
+<router-outlet></router-outlet>
