--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,8 @@
     </div>
     <div >
       <nav>
+        <li><a routerLink="/log-in">login</a></li>
+        <li><a routerLink="/sign-up">register</a></li>
         <li><a routerLink="/root">root of equation</a></li>
         <li><a routerLink="/linear">linear algibra</a></li>
         <li><a routerLink="/interpotation and extrapolation">interpotation and extrapolation</a></li>
